[gd_scene load_steps=5 format=3 uid="uid://bac0kef0nibmf"]

[ext_resource type="Script" path="res://enemies/dynamite_goblin.gd" id="1_4k3dt"]
[ext_resource type="SpriteFrames" uid="uid://c26vbia2xr5m6" path="res://sprites/animated/enemies/dynamite_goblin.tres" id="2_5k20i"]
[ext_resource type="Script" path="res://behaviors/enemies/follow_player.gd" id="3_8uts7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bbsug"]
radius = 16.0

[node name="DynamiteGoblin" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_4k3dt")
maxHealth = 2
maxSpeed = 0.6

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = ExtResource("2_5k20i")
animation = &"attack"
autoplay = "run"

[node name="Colission" type="CollisionShape2D" parent="."]
position = Vector2(1, -16)
rotation = -1.57422
scale = Vector2(1, 1.00816)
shape = SubResource("CircleShape2D_bbsug")

[node name="FollowPlayer" type="Node" parent="."]
script = ExtResource("3_8uts7")

[node name="DamageMarker" type="Marker2D" parent="."]
position = Vector2(0, -52)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 300)

[node name="ThrowPoint" type="Marker2D" parent="."]
position = Vector2(24, -36)

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
